<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".ui.dashboard.MainActivity">

    <LinearLayout
        android:id="@+id/sectionOne"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@drawable/sectionone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_bold"
            android:textColor="@color/black"
            android:text="@string/hi_there"
            android:textSize="28sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"
            android:textColor="@color/black"
            android:text="@string/welcome_to_pixa_ada_where_you_can_get_stunning_free_popular_images"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sectionTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sectionOne">

        <TextView
            android:id="@+id/secTwoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/font_regular"
            android:text="@string/popular_images"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/font_regular"
            android:text="@string/popular_list"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/loginUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_txt"
        android:drawableEnd="@drawable/baseline_image_search_black_36dp"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/font_regular"
        android:hint="@string/search_images"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sectionTwo" />

    <TextView
        android:id="@+id/totalSearchResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/font_regular"
        android:hint="@string/results_230"
        android:textColor="@color/success_green"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginUserId" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalSearchResults"
        app:spanCount="2"
        tools:itemCount="16"
        tools:listitem="@layout/grid_view_item" />

</androidx.constraintlayout.widget.ConstraintLayout>