<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".ui.detailsview.DetailsActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_black_36dp" />

    <TextView
        android:id="@+id/tagName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/font_bold"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <ImageView
        android:id="@+id/largeImg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/img"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagName"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/largeImg">

        <TextView
            android:id="@+id/noOfViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"
            android:hint="@string/_120"
            android:layout_weight="1"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:drawablePadding="16dp"
            app:drawableStartCompat="@drawable/baseline_remove_red_eye_green_800_18dp"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:fontFamily="@font/font_regular"
            android:hint="@string/jones_mbindyo"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:drawablePadding="16dp"
            app:drawableStartCompat="@drawable/baseline_account_circle_grey_700_18dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>